# template-rust

./: .gitignore  Cargo.toml  README.md  run.sh
.github/: dependabot.yml
.github/workflows/: rust-push.yml
src/: main.rs  some_module.rs
